# tro2022_adaptivecontrol

./: .gitmodules  CMakeLists.txt  README.md  adaptive_control_import_eval.py  test_python_wrapper.sh
.github/workflows/: cpp-build-check.yml  python-wrapper-check.yml
include/example/: Example_AdaptiveController.h  Example_SerialManipulatorEDH.h  M3_AdaptiveController.h  M3_MeasurementSpace.h  M3_SerialManipulatorEDH.h  M3_VFI.h
include/marinholab/papers/tro2022/adaptive_control/: M3_AdaptiveController.h  M3_VFI.h  M3_VS050VrepRobot.h
python_wrapper/: CMakeLists.txt  pyproject.toml
python_wrapper/src/: adaptive_control_example_py.cpp
src/example/: Example_AdaptiveController.cpp  Example_SerialManipulatorEDH.cpp  Example_VFI.cpp  M3_AdaptiveController.cpp  M3_MeasurementSpace.cpp  M3_SerialManipulatorEDH.cpp  M3_VFI.cpp  M3_VS050VrepRobot.cpp
